System modal has the “All” radio button selected even if a custom page range was set from the new UI
Categories
(Toolkit :: Printing, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | disabled |
firefox82 | --- | verified |
People
(Reporter: emilghitta, Assigned: emmamalysz)
References
(Blocks 1 open bug)
Details
(Keywords: regression, Whiteboard: [print2020_v82][old-ui-])
Attachments
(2 files)
Affected versions
- 82.0a1 (BuildId:20200902095359)
- 81.0b5 (BuildId:20200901203141)
Affected platforms
- Windows 10 64bit
- Ubuntu 18.04 64bit (I will get back with a confirmation on Ubuntu tomorrow, marking this as affect until then).
Unaffected platforms
- macOS 10.14
Steps to reproduce
- Launch Firefox.
- Access the following link
- Hit Ctrl + P
- Select a physical printer and set a custom range between
1
and2
(out of 3 total pages). - Click the “Print using the system dialog” option.
- Print the page via the system dialog.
Expected result
- The System dialog opens and the
Pages
radio button from the “Page Range” section is selected (because a custom range has been selected in the UI) and the page range from the system modal reflects the values from the new UI.
Actual result
- The System dialog opens and the
All
radio button is selected from the “Page Range” section. The page range from the system modal reflects the values from the new UI but having the “All” radio button selected will go ahead and print all the pages.
Regression Window
- This seems to be a regression.
- Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=3822966f80969a59b7034df220b156d6a513b878&tochange=1b228ca5d679f60bc5f40f646e0515dd84670863
- Possible regressor: Bug 1653389
Additional Information
- For further information regarding this issue please observe the attached screencast.
- Setting the ALL platforms for now until I get a confirmation that Ubuntu is affected as well.
- [Suggested Severity] S3
Reporter | ||
Comment 1•4 years ago
|
||
Hi Emma!
It seems that mozregression pointed out Bug 1653389, show error if page range input is invalid r=fluent-reviewers,sfoster,flod
for causing this regression.
I can see that Bug 1661852 has the same output but that's a little bit different since I think that covers a different scenario.
Can you please take a look?
Thank you!
Updated•4 years ago
|
Assignee | ||
Comment 2•4 years ago
|
||
I think this may be covered in Bug 1661852, but I'll have to double check
Reporter | ||
Comment 3•4 years ago
|
||
I can still reproduce this issue using Firefox 82.0a1 (BuildId:20200903094553). (Bug 1661852 has landed in m-c)
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Assignee | ||
Comment 4•4 years ago
|
||
Updated•4 years ago
|
Comment 6•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 7•4 years ago
|
||
Reproduced the initial issue using old Nightly (2020-09-02), verified that this is fixed in Firefox 82.0b3 on Windows 10 and Ubuntu 18.04 but not in macOS 10.15.7.
I also see this issue with Chrome as well. Could it be that this is intended not to work on MacOS?
Assignee | ||
Comment 8•4 years ago
|
||
No, this should still work on MacOS. I'm seeing it work in my local build, but it doesn't seem to work on Nightly.. I'll look into this
Assignee | ||
Comment 9•4 years ago
|
||
I filed 1668894 for macOS. That seems to occur for changing settings when "Save to pdf" is the selected printer.
Comment 10•4 years ago
|
||
Got it, I'll close this bug as verified and track the remaining work for macOS in bug 1668894.
Comment 11•4 years ago
|
||
Comment 12•3 years ago
|
||
I can still reproduce this issue using Nightly 93.0a1 on Ubuntu 18.04 x64.
Assignee | ||
Comment 13•3 years ago
|
||
If you input a specific custom range into the field, then it should switch to "custom".
However, if no range is inputted with custom selected, it'll still show as all. This should be addressed in bug 1660929
Comment 14•3 years ago
|
||
I used a valid range and then clicked on “Print using the system dialog” option. The only difference from the STR in comment 0 is that I used "Save to Pdf" option. The issue is not reproducing while using a physical printer.
Description
•