Bug 1662818, select pages radio button from system dialog if custom range is specified r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D90176